knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Objective__c/fields/pqcrush__Next_Step__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Next_Step__c</fullName>
    <label>Next Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>