knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Objective__c/fields/pqcrush__Percent_To_Goal__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Percent_To_Goal__c</fullName>
    <label>Percentage to Goal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>