knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Objective__c/fields/pqcrush__Stage_Override__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Stage_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stage Override</label>
    <type>Checkbox</type>
</CustomField>